[package]
name = "branswers"
version = "0.1.0"
authors = ["Mårten Nilsson <nilssonmarten@live.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "0.10.0"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = { version = "1.0", features = ["derive"] }